third_party/move/move-compiler-v2/tests/reference-safety/bug_13927.exp

Diagnostics:
error: cannot freeze value which is still mutably borrowed
   ┌─ tests/reference-safety/bug_13927.move:10:9
   │
 9 │         let returned_ref = foo(result);
   │                            ----------- previously mutably borrowed here
10 │         freeze(result);
   │         ^^^^^^^^^^^^^^ frozen here
11 │         returned_ref
   │         ------------ conflicting reference `returned_ref` used here
